--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Journalism and Design Toolkit Homepage by Albert Chang III</title>
     <style>
       @import url('https://fonts.googleapis.com/css?family=Muli&display=swap');
       @import url('https://fonts.googleapis.com/css?family=Quicksand&display=swap');
@@ -23,19 +22,55 @@
         letter-spacing: -.02em;
         color: rgba(0, 0, 0, 0.8);
         -webkit-font-smoothing: antialiased;
-      }
+}
+</style>
+</head>
+<body>
     </style>
   </head>
   <body>
+     <title>Journalism and Design Toolkit Homepage by Albert Chang III</title>
     <h1>WELCOME</h1>
     <p>
       This is Albert Chang III's working portfolio page for the Spring 2021 Journalism Design Toolkit class as part of the Journalism and Design department at Eugene Lang College for the Liberal Arts at The New School University.
     </p>
   </body>
 </html>
+<!DOCTYPE html>
+<html lang="en">
+<style>
+/* This style sets the width of all images to 100%: */
+img {
+  width: 100%;
+}
 
-<img src="ASSIGNMENTIVLOGOMADEWITHILLUSTRATOR.svg" alt="ASSIGNMENTIVLOGOMADEWITHILLUSTRATOR" width="500" height="1000">
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #white;
+}
 
+li {
+  float: left;
+}
+
+li a {
+  display: block;
+  color: red;
+  text-align: center;
+  padding: 16px;
+  text-decoration: none;
+}
+
+li a:hover {
+  background-color: black;
+}
+</style>
+
+<img src="assignmentivlogomadewithillustrator.svg" alt="ASSIGNMENTIVLOGOMADEWITHILLUSTRATOR" width="500" height="1000">
+<body>
 <ul>
   <li><a href="index.html">Assignment I: HOMEPAGE</a></li>
   <li><a href="AssignmentII.html">Assignment II: BASIC PHOTO EDITING</a></li>
@@ -54,7 +89,7 @@
 Fashion is part of human nature.
 </p>
 
-<iframe src="joined_video_532acee117ef455abc166e73fedcbdb9.m4v" width="100%" height="1200">
+<iframe src="tshirts.m4v" width="100%" height="1200">
     </iframe>
 
 <h1 style="background-color:White;">Art&#128151</h1>
@@ -66,15 +101,6 @@ My art is special to me because it makes me happy.
 <a href="https://github.com/changstar26/jdtoolkit-homepage">Link to the source code on Github</a>.</p>
 <html>
 <head>
-<style>
-ul.demo {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-}
-</style>
-</head>
-<body>
 
 <p>Soon to come:</p>
 <ul>
@@ -82,6 +108,7 @@ ul.demo {
   <li>Designs</li>
   <li>Discussions</li>
 </ul>
+
 </body>
 </html>
 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3023.205999332349!2d-73.99932478459428!3d40.73549247932936!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c259cc8c6f8605%3A0x18ab20853dda375c!2sThe%20New%20School!5e0!3m2!1sen!2sus!4v1630583141073!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
