--- a/assignmentII.html
+++ b/assignmentII.html
@@ -1,4 +1,42 @@
-<!DOCTY<!DOCTYPE html>
+<!DOCTYPE html>
+<html>
+  <head>
+    <style>
+      @import url('https://fonts.googleapis.com/css?family=Muli&display=swap');
+      @import url('https://fonts.googleapis.com/css?family=Quicksand&display=swap');
+      body {
+        font-family: 'Muli', sans-serif;
+        color: rgba(0, 0, 0, 0.8);
+        font-weight: 400;
+        line-height: 1.58;
+        letter-spacing: -.003em;
+        font-size: 20px;
+        padding: 70px;
+      }
+      h1 {
+        font-family: 'Quicksand', sans-serif;
+        font-weight: 700;
+        font-style: normal;
+        font-size: 38px;
+        line-height: 1.15;
+        letter-spacing: -.02em;
+        color: rgba(0, 0, 0, 0.8);
+        -webkit-font-smoothing: antialiased;
+}
+</style>
+</head>
+<body>
+    </style>
+  </head>
+  <body>
+     <title>Journalism and Design Toolkit Homepage by Albert Chang III</title>
+    <h1>WELCOME</h1>
+    <p>
+      This is Albert Chang III's working portfolio page for the Spring 2021 Journalism Design Toolkit class as part of the Journalism and Design department at Eugene Lang College for the Liberal Arts at The New School University.
+    </p>
+  </body>
+</html>
+<!DOCTYPE html>
 <html lang="en">
 <style>
 /* This style sets the width of all images to 100%: */
@@ -11,7 +49,7 @@ ul {
   margin: 0;
   padding: 0;
   overflow: hidden;
-  background-color: #333333;
+  background-color: #white;
 }
 
 li {
@@ -20,17 +58,18 @@ li {
 
 li a {
   display: block;
-  color: white;
+  color: red;
   text-align: center;
   padding: 16px;
   text-decoration: none;
 }
 
 li a:hover {
-  background-color: #111111;
+  background-color: black;
 }
 </style>
 
+<body>
 <ul>
   <li><a href="index.html">Assignment I: HOMEPAGE</a></li>
   <li><a href="AssignmentII.html">Assignment II: BASIC PHOTO EDITING</a></li>
@@ -39,18 +78,67 @@ li a:hover {
   <li><a href="AssignmentV.html">Assignment V: POSTER/FLYER MADE WITH ILLUSTRATOR</a></li>
   <li><a href="AssignmentVI.html">Assignment VI: BIG BOOKLET FINAL PROJECT</a></li>
 </ul>
+<html>
+<head>
+<style>
+div.gallery {
+  margin: 5px;
+  border: 1px solid #ccc;
+  float: left;
+  width: 180px;
+}
 
-<h2>1. 1000px wide, 3:4 width to height ratio, 600dpi, medium-quality jpg</h2>
-<img src="A2I1.jpg" width="1000" height="1200">
+div.gallery:hover {
+  border: 1px solid #777;
+}
 
-<h3>2. 800px wide, 4:3 width to height ratio, 300dpi, png</h3>
-<img src="A2I2.png" width="800" height="600">
+div.gallery img {
+  width: 100%;
+  height: auto;
+}
 
-<h4>3. 1000px wide, 16:9 width to height ratio, 600dpi, high-quality jpg</h4>
-<img src="A2I3.jpg" width="1000" height="562.5">
+div.desc {
+  padding: 15px;
+  text-align: center;
+}
+</style>
+</head>
+<body>
 
-<h5>4. 600px wide, 3:2 width to height ratio, 72dpi, low-quality png</h5>
-<img src="A2I4.jpg"  width="600" height="400">
+<div class="gallery">
+  <a target="_blank" href="A2I1.jpg">
+    <img src="A2I1.jpg" alt="Cinque Terre" width="1000" height="1200">
+  </a>
+  <div class="desc">1. 1000px wide, 3:4 width to height ratio, 600dpi, medium-quality jpg</div>
+</div>
 
-<h6>5. 300px square, 150dpi, medium-quality jpg</h6>
-<img src="A2I5.jpg" alt"assignment2image5.jpg" width="300" height="300">
+<div class="gallery">
+  <a target="_blank" href="img_forest.jpg">
+    <img src="A2I2.png" alt="Forest" width="800" height="600">
+  </a>
+  <div class="desc">2. 800px wide, 4:3 width to height ratio, 300dpi, png</div>
+</div>
+
+<div class="gallery">
+  <a target="_blank" href="img_lights.jpg">
+    <img src="A2I3.jpg" alt="Northern Lights" width="100" height="562.5">
+  </a>
+  <div class="desc">3. 1000px wide, 16:9 width to height ratio, 600dpi, high-quality jpg</div>
+</div>
+
+<div class="gallery">
+  <a target="_blank" href="img_mountains.jpg">
+    <img src="A2I4.jpg" alt="Mountains" width="600" height="400">
+  </a>
+  <div class="desc">4. 600px wide, 3:2 width to height ratio, 72dpi, low-quality jpg</div>
+</div>
+
+<div class="gallery">
+  <a target="_blank" href="5. 300px square, 150dpi, medium-quality jpg">
+    <img src="A2I5.jpg" alt="Mountains" width="300" height="300">
+  </a>
+  <div class="desc">5. 300px square, 150dpi, medium-quality jpg</div>
+</div>
+
+</body>
+</html>
