--- a/assignmentIII.html
+++ b/assignmentIII.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Journalism and Design Toolkit Homepage by Albert Chang III</title>
     <style>
       @import url('https://fonts.googleapis.com/css?family=Muli&display=swap');
       @import url('https://fonts.googleapis.com/css?family=Quicksand&display=swap');
@@ -23,9 +22,54 @@
         letter-spacing: -.02em;
         color: rgba(0, 0, 0, 0.8);
         -webkit-font-smoothing: antialiased;
-      }
+}
+</style>
+</head>
+<body>
     </style>
+  </head>
+  <body>
+     <title>Journalism and Design Toolkit Homepage by Albert Chang III</title>
+    <h1>WELCOME</h1>
+    <p>
+      This is Albert Chang III's working portfolio page for the Spring 2021 Journalism Design Toolkit class as part of the Journalism and Design department at Eugene Lang College for the Liberal Arts at The New School University.
+    </p>
+  </body>
+</html>
+<!DOCTYPE html>
+<html lang="en">
+<style>
+/* This style sets the width of all images to 100%: */
+img {
+  width: 100%;
+}
 
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #white;
+}
+
+li {
+  float: left;
+}
+
+li a {
+  display: block;
+  color: red;
+  text-align: center;
+  padding: 16px;
+  text-decoration: none;
+}
+
+li a:hover {
+  background-color: black;
+}
+</style>
+
+<body>
 <ul>
   <li><a href="index.html">Assignment I: HOMEPAGE</a></li>
   <li><a href="AssignmentII.html">Assignment II: BASIC PHOTO EDITING</a></li>
@@ -34,31 +78,95 @@
   <li><a href="AssignmentV.html">Assignment V: POSTER/FLYER MADE WITH ILLUSTRATOR</a></li>
   <li><a href="AssignmentVI.html">Assignment VI: BIG BOOKLET FINAL PROJECT</a></li>
 </ul>
-
 <h1>Assignment III: PHOTO EDITING WITH PHOTOSHOP</h1>
 
 <p title=PHOTO EDITING WITH PHOTOSHOP>
 
-<html>
+</html>
+</body>
+<table>
+  <html>
+<head>
+<style>
+div.gallery {
+  margin: 5px;
+  border: 1px solid #ccc;
+  float: left;
+  width: 180px;
+}
+
+div.gallery:hover {
+  border: 1px solid #777;
+}
+
+div.gallery img {
+  width: 100%;
+  height: auto;
+}
+
+div.desc {
+  padding: 15px;
+  text-align: center;
+}
+</style>
+</head>
 <body>
 
-<p>This is a cropped image of me in one of my favorite cardigans.</p>
-<img src="croppedportrait.jpg" alt="croppedportrait" width="600" height="1000">
-<p>This image is of my younger brother and I. His name is Alexander.</p>
-<img src="groupphoto.jpg" alt="groupphoto" width="600" height="1000">
-<p>This is a picture of Fulton street, where I take the A train to the New School.</p>
-<img src="wideshotoflocation.jpg" alt="Wideshotoflocation" width="600" height="1000">
-<p>This is an image of my shoes that I have designed through collage and reconstruction.</p>
-<img src="closeupphotocropped.jpg" alt="closeupphotocropped" width="600" height="1000">
-<p>This is a picture showing an image of me on a roof before and after editting.</p>
-<img src="overexposedimage5.jpg" alt="Overexposedimage5.jpg" width="600" height="1000">
-<p>This is a picture showing an image of a vehicle before and after editting.</p>
-<img src="underexposedimage6.jpg" alt="Underexposedimage6.jpg" width="600" height="1000">
-<p>This is the banner.</p>
-<img src="banner.jpg" alt="banner" width="1000" height="600">
-<p>This is the group photo of Alexander and I, with the Journalism and Design Logo in the bottom right corner.</p>
-<img src="groupphotowithjdlogo.jpg" alt="groupphotowithjdlogo.jpg" width="1000" height="600">
-<p>This is my creative image.</p>
-<img src="creativeimage.jpg" alt="creativeimage.jpg" width="600" height="
-1000">
+<div class="gallery">
+  <a target="_blank" href="croppedportrait.jpg">
+    <img src="croppedportrait.jpg" alt="croppedportrait.jpg" width="600" height="1000">
+  </a>
+  <div class="desc">This is a cropped image of me in one of my favorite cardigans.</div>
+</div>
 
+<div class="gallery">
+  <a target="_blank" href="groupphoto.jpg">
+    <img src="groupphoto.jpg" alt="groupphoto.jpg" width="600" height="1000">
+  </a>
+  <div class="desc">This image is of my younger brother and I. His name is Alexander.</div>
+</div>
+
+<div class="gallery">
+  <a target="_blank" href="wideshotoflocation.jpg">
+    <img src="wideshotoflocation.jpg" alt="wideshotoflocation.jpg" width="600" height="1000">
+  </a>
+  <div class="desc">This is a picture of Fulton street, where I take the A train to the New School.</div>
+</div>
+
+<div class="gallery">
+  <a target="_blank" href="closeupphotocropped.jpg">
+    <img src="closeupphotocropped.jpg" alt="closeupphotocropped" width="600" height="1000">
+  </a>
+  <div class="desc">This is an image of my shoes that I have designed through collage and reconstruction.</div>
+</div>
+
+<div class="gallery">
+  <a target="_blank" href="overexposedimage5.jpg">
+    <img src="overexposedimage5.jpg" alt="overexposedimage5" width="600" height="1000">
+  </a>
+  <div class="desc">This is a picture showing an image of me on a roof before and after editting.</div>
+</div>
+
+<div class="gallery">
+  <a target="_blank" href="banner.jpg">
+    <img src="banner.jpg" alt="banner" width="600" height="1000">
+  </a>
+  <div class="desc">This is the banner.</div>
+</div>
+
+<div class="gallery">
+  <a target="_blank" href="groupphotowithjdlogo">
+    <img src="groupphotowithjdlogo.jpg" alt="groupphotowithjdlogo" width="600" height="1000">
+  </a>
+  <div class="desc">This is the group photo of Alexander and I, with the Journalism and Design Logo in the bottom right corner.</div>
+</div>
+
+<div class="gallery">
+  <a target="_blank" href="creativeimage.jpg">
+    <img src="creativeimage.jpg" alt="creativeimage" width="600" height="1000">
+  </a>
+  <div class="desc">This is my creative image.</div>
+</div>
+
+</body>
+</html>
