--- a/assignmentIV.html
+++ b/assignmentIV.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Journalism and Design Toolkit Homepage by Albert Chang III</title>
     <style>
       @import url('https://fonts.googleapis.com/css?family=Muli&display=swap');
       @import url('https://fonts.googleapis.com/css?family=Quicksand&display=swap');
@@ -23,16 +22,61 @@
         letter-spacing: -.02em;
         color: rgba(0, 0, 0, 0.8);
         -webkit-font-smoothing: antialiased;
-      }
+}
+</style>
+</head>
+<body>
     </style>
+  </head>
+  <body>
+     <title>Journalism and Design Toolkit Homepage by Albert Chang III</title>
+    <h1>WELCOME</h1>
+    <p>
+      This is Albert Chang III's working portfolio page for the Spring 2021 Journalism Design Toolkit class as part of the Journalism and Design department at Eugene Lang College for the Liberal Arts at The New School University.
+    </p>
+  </body>
+</html>
+<!DOCTYPE html>
+<html lang="en">
+<style>
+/* This style sets the width of all images to 100%: */
+img {
+  width: 100%;
+}
 
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #white;
+}
+
+li {
+  float: left;
+}
+
+li a {
+  display: block;
+  color: red;
+  text-align: center;
+  padding: 16px;
+  text-decoration: none;
+}
+
+li a:hover {
+  background-color: black;
+}
+</style>
+
+<body>
 <ul>
   <li><a href="index.html">Assignment I: HOMEPAGE</a></li>
   <li><a href="AssignmentII.html">Assignment II: BASIC PHOTO EDITING</a></li>
   <li><a href="AssignmentIII.html">Assignment III: PHOTO EDITING WITH PHOTOSHOP</a></li>
   <li><a href="AssignmentIV.html">Assignment IV: LOGO MADE WITH ILLUSTRATOR</a><li>
   <li><a href="AssignmentV.html">Assignment V: POSTER/FLYER MADE WITH ILLUSTRATOR</a></li>
-  <li><a href="assignmentVI.html">Assignment VI: BIG BOOKLET FINAL PROJECT</a></li>
+  <li><a href="AssignmentVI.html">Assignment VI: BIG BOOKLET FINAL PROJECT</a></li>
 </ul>
 
 <html>
@@ -42,8 +86,8 @@
 <p title=LOGO MADE WITH ILLUSTRATOR>
 </p>
 
-<p>This logo I created is about my name, Albert Chang III.</p>
+<p>"This logo I created is about my name, Albert Chang III.</p>
 
-<img src="ASSIGNMENTIVLOGOMADEWITHILLUSTRATOR.png" alt="ASSIGNMENTIVLOGOMADEWITHILLUSTRATOR" width="500" height="1000">
+<img src="assignmentivlogomadewithillustrator.svg" width="500" height="1000">
 </body>
 </html>
