--- a/assignmentv.html
+++ b/assignmentv.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Journalism and Design Toolkit Homepage by Albert Chang III</title>
     <style>
       @import url('https://fonts.googleapis.com/css?family=Muli&display=swap');
       @import url('https://fonts.googleapis.com/css?family=Quicksand&display=swap');
@@ -23,9 +22,54 @@
         letter-spacing: -.02em;
         color: rgba(0, 0, 0, 0.8);
         -webkit-font-smoothing: antialiased;
-      }
+}
+</style>
+</head>
+<body>
     </style>
+  </head>
+  <body>
+     <title>Journalism and Design Toolkit Homepage by Albert Chang III</title>
+    <h1>WELCOME</h1>
+    <p>
+      This is Albert Chang III's working portfolio page for the Spring 2021 Journalism Design Toolkit class as part of the Journalism and Design department at Eugene Lang College for the Liberal Arts at The New School University.
+    </p>
+  </body>
+</html>
+<!DOCTYPE html>
+<html lang="en">
+<style>
+/* This style sets the width of all images to 100%: */
+img {
+  width: 100%;
+}
 
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #white;
+}
+
+li {
+  float: left;
+}
+
+li a {
+  display: block;
+  color: red;
+  text-align: center;
+  padding: 16px;
+  text-decoration: none;
+}
+
+li a:hover {
+  background-color: black;
+}
+</style>
+
+<body>
 <ul>
   <li><a href="index.html">Assignment I: HOMEPAGE</a></li>
   <li><a href="AssignmentII.html">Assignment II: BASIC PHOTO EDITING</a></li>
