--- a/assignmentII.html
+++ b/assignmentII.html
@@ -72,11 +72,11 @@ li a:hover {
 <body>
 <ul>
   <li><a href="index.html">Assignment I: HOMEPAGE</a></li>
-  <li><a href="AssignmentII.html">Assignment II: BASIC PHOTO EDITING</a></li>
-  <li><a href="AssignmentIII.html">Assignment III: PHOTO EDITING WITH PHOTOSHOP</a></li>
-  <li><a href="AssignmentIV.html">Assignment IV: LOGO MADE WITH ILLUSTRATOR</a><li>
-  <li><a href="AssignmentV.html">Assignment V: POSTER/FLYER MADE WITH ILLUSTRATOR</a></li>
-  <li><a href="AssignmentVI.html">Assignment VI: BIG BOOKLET FINAL PROJECT</a></li>
+  <li><a href="assignmentii.html">Assignment II: BASIC PHOTO EDITING</a></li>
+  <li><a href="assignmentiii.html">Assignment III: PHOTO EDITING WITH PHOTOSHOP</a></li>
+  <li><a href="assignmentiv.html">Assignment IV: LOGO MADE WITH ILLUSTRATOR</a><li>
+  <li><a href="assignmentv.html">Assignment V: POSTER/FLYER MADE WITH ILLUSTRATOR</a></li>
+  <li><a href="assignmentvi.html">Assignment VI: BIG BOOKLET FINAL PROJECT</a></li>
 </ul>
 <html>
 <head>
@@ -139,6 +139,7 @@ div.desc {
   </a>
   <div class="desc">5. 300px square, 150dpi, medium-quality jpg</div>
 </div>
+
 
 </body>
 </html>
