--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ li a:hover {
 }
 </style>
 
-<img src="assignmentivlogomadewithillustrator.png" alt="ASSIGNMENTIVLOGOMADEWITHILLUSTRATOR" width="1000" height="1000">
+<img src="assignmentivlogomadewithillustrator.svg" alt="ASSIGNMENTIVLOGOMADEWITHILLUSTRATOR" width="1000" height="1000">
 <body>
 <ul>
   <li><a href="index.html">Assignment I: HOMEPAGE</a></li>
