--- a/assignmentii.html
+++ b/assignmentii.html
@@ -107,35 +107,37 @@ div.desc {
 
 <div class="gallery">
   <a target="_blank" href="A2I1.jpg">
-    <img src="A2I1.jpg" alt="Cinque Terre" width="1000" height="1200">
+    <img src="A2I1.jpg" alt="Image 1" width="1000" height="1200">
   </a>
+
   <div class="desc">1. 1000px wide, 3:4 width to height ratio, 600dpi, medium-quality jpg</div>
 </div>
 
 <div class="gallery">
-  <a target="_blank" href="img_forest.jpg">
-    <img src="A2I2.png" alt="Forest" width="800" height="600">
+  <a target="_blank" href="A2I2.png">
+    <img src="A2I2.png" alt="Image 2" width="800" height="600">
   </a>
+
   <div class="desc">2. 800px wide, 4:3 width to height ratio, 300dpi, png</div>
 </div>
 
 <div class="gallery">
-  <a target="_blank" href="img_lights.jpg">
-    <img src="A2I3.jpg" alt="Northern Lights" width="100" height="562.5">
+  <a target="_blank" href="A2I3.jpg">
+    <img src="A2I3.jpg" alt="Image 3" width="100" height="562.5">
   </a>
   <div class="desc">3. 1000px wide, 16:9 width to height ratio, 600dpi, high-quality jpg</div>
 </div>
 
 <div class="gallery">
-  <a target="_blank" href="img_mountains.jpg">
-    <img src="A2I4.jpg" alt="Mountains" width="600" height="400">
+  <a target="_blank" href="A2I4.jpg">
+    <img src="A2I4.jpg" alt="Image 4" width="600" height="400">
   </a>
   <div class="desc">4. 600px wide, 3:2 width to height ratio, 72dpi, low-quality jpg</div>
 </div>
 
 <div class="gallery">
-  <a target="_blank" href="5. 300px square, 150dpi, medium-quality jpg">
-    <img src="A2I5.jpg" alt="Mountains" width="300" height="300">
+  <a target="_blank" href="A2I5.jpg">
+    <img src="A2I5.jpg" alt="Image 5" width="300" height="300">
   </a>
   <div class="desc">5. 300px square, 150dpi, medium-quality jpg</div>
 </div>
