--- a/assignmentii.html
+++ b/assignmentii.html
@@ -72,11 +72,11 @@ li a:hover {
 <body>
 <ul>
   <li><a href="index.html">Assignment I: HOMEPAGE</a></li>
-  <li><a href="Assignmentii.html">Assignment II: BASIC PHOTO EDITING</a></li>
-  <li><a href="Assignmentiii.html">Assignment III: PHOTO EDITING WITH PHOTOSHOP</a></li>
-  <li><a href="Assignmentiv.html">Assignment IV: LOGO MADE WITH ILLUSTRATOR</a><li>
-  <li><a href="Assignmentv.html">Assignment V: POSTER/FLYER MADE WITH ILLUSTRATOR</a></li>
-  <li><a href="Assignmentvi.html">Assignment VI: BIG BOOKLET FINAL PROJECT</a></li>
+  <li><a href="assignmentii.html">Assignment II: BASIC PHOTO EDITING</a></li>
+  <li><a href="assignmentiii.html">Assignment III: PHOTO EDITING WITH PHOTOSHOP</a></li>
+  <li><a href="assignmentiv.html">Assignment IV: LOGO MADE WITH ILLUSTRATOR</a><li>
+  <li><a href="assignmentv.html">Assignment V: POSTER/FLYER MADE WITH ILLUSTRATOR</a></li>
+  <li><a href="assignmentvi.html">Assignment VI: BIG BOOKLET FINAL PROJECT</a></li>
 </ul>
 <html>
 <head>
@@ -107,7 +107,7 @@ div.desc {
 
 <div class="gallery">
   <a target="_blank" href="A2I1.jpg">
-    <img src="A2I1.jpg" alt="Image 1" width="1000" height="1200">
+    <img src="a2i1.jpg" alt="Image 1" width="1000" height="1200">
   </a>
 
   <div class="desc">1. 1000px wide, 3:4 width to height ratio, 600dpi, medium-quality jpg</div>
@@ -115,7 +115,7 @@ div.desc {
 
 <div class="gallery">
   <a target="_blank" href="A2I2.png">
-    <img src="A2I2.png" alt="Image 2" width="800" height="600">
+    <img src="a2i2.png" alt="Image 2" width="800" height="600">
   </a>
 
   <div class="desc">2. 800px wide, 4:3 width to height ratio, 300dpi, png</div>
@@ -123,24 +123,26 @@ div.desc {
 
 <div class="gallery">
   <a target="_blank" href="A2I3.jpg">
-    <img src="A2I3.jpg" alt="Image 3" width="100" height="562.5">
+    <img src="a2i3.jpg" alt="Image 3" width="100" height="562.5">
   </a>
   <div class="desc">3. 1000px wide, 16:9 width to height ratio, 600dpi, high-quality jpg</div>
 </div>
 
 <div class="gallery">
   <a target="_blank" href="A2I4.jpg">
-    <img src="A2I4.jpg" alt="Image 4" width="600" height="400">
+    <img src="a2i4.jpg" alt="Image 4" width="600" height="400">
   </a>
   <div class="desc">4. 600px wide, 3:2 width to height ratio, 72dpi, low-quality jpg</div>
 </div>
 
 <div class="gallery">
-  <a target="_blank" href="A2I5.jpg">
-    <img src="A2I5.jpg" alt="Image 5" width="300" height="300">
+  <a target="A2I5.jpg" href="A2I5.jpg">
+    <img src="a2i5.jpg" alt="Image 5" width="300" height="300">
   </a>
   <div class="desc">5. 300px square, 150dpi, medium-quality jpg</div>
 </div>
 
 </body>
+</html>
+
 </html>
