--- a/assignmentvi.html
+++ b/assignmentvi.html
@@ -72,11 +72,11 @@ li a:hover {
 <body>
 <ul>
   <li><a href="index.html">Assignment I: HOMEPAGE</a></li>
-  <li><a href="AssignmentII.html">Assignment II: BASIC PHOTO EDITING</a></li>
-  <li><a href="AssignmentIII.html">Assignment III: PHOTO EDITING WITH PHOTOSHOP</a></li>
-  <li><a href="AssignmentIV.html">Assignment IV: LOGO MADE WITH ILLUSTRATOR</a><li>
-  <li><a href="AssignmentV.html">Assignment V: POSTER/FLYER MADE WITH ILLUSTRATOR</a></li>
-  <li><a href="AssignmentVI.html">Assignment VI: BIG BOOKLET FINAL PROJECT</a></li>
+  <li><a href="assignmentii.html">Assignment II: BASIC PHOTO EDITING</a></li>
+  <li><a href="assignmentiii.html">Assignment III: PHOTO EDITING WITH PHOTOSHOP</a></li>
+  <li><a href="assignmentiv.html">Assignment IV: LOGO MADE WITH ILLUSTRATOR</a><li>
+  <li><a href="assignmentv.html">Assignment V: POSTER/FLYER MADE WITH ILLUSTRATOR</a></li>
+  <li><a href="assignmentvi.html">Assignment VI: BIG BOOKLET FINAL PROJECT</a></li>
 </ul>
 
 <h1>Assignment VI: BIG BOOKLET FINAL PROJECT</h1>
@@ -95,7 +95,7 @@ ul.demo {
 </head>
 <body>
 
-<p>Default list:</p>
+<p>View List:</p>
 <ul>
   <li><a href="assignmentvibooklet.pdf">A marvelous microbe: pseudomonas syringae by Albert Chang III pdf.</a></li>
   <li><a href="assignmentvibooklet.indd">A marvelous microbe: pseudomonas syringae by Albert Chang III on inDesign</a>.</p></li>
@@ -106,7 +106,8 @@ ul.demo {
   </head>
   <body>
     <h1>The Marvelous Microbe: Pseudemonas Syringae</h1>
-    <iframe src="assignmentvibooklet.pdf" width="100%" height="1200">
+    <iframe src="amarvelousmicrobe.pdf" width="100%" height="1200">
     </iframe>
   </body>
 </html>
+
