--- a/assignmentvi.html
+++ b/assignmentvi.html
@@ -106,7 +106,7 @@ ul.demo {
   </head>
   <body>
     <h1>The Marvelous Microbe: Pseudemonas Syringae</h1>
-    <iframe src="amarvelousmicrobe.pdf" width="100%" height="1200">
+    <iframe src="assignmentvibooklet.pdf" width="100%" height="1200">
     </iframe>
   </body>
 </html>
